# plox

./: README.md  main.py  pyproject.toml
plox/: interpreter.py  main.py  scanner.py  tokens.py
plox/ast/: ast.py
plox/backend/visitors/: eval.py  pprint.py
plox/backend/visitors/eval/: native_funcs.py  runtime.py  visitor.py
plox/frontend/: ast.py  parser.py  scanner.py  tokens.py
tests/: __init__.py  scanner.py  test_parser.py  test_scanner.py
tool/: astgen.py
